--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -17,7 +17,7 @@ line_length:
   - 250 #warning
   - 300 #error
 
-variable_name:
+identifier_name:
   min_length:
     - 1 #warning
     - 1 #error (essentially disabling minimum length check)
