--- a/PhotosForDays/Info.plist
+++ b/PhotosForDays/Info.plist
@@ -39,6 +39,11 @@
 	</dict>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
+	<key>NSUserActivityTypes</key>
+	<array>
+		<string>com.collissions.PhotosForDays.selectDate</string>
+		<string>com.collissions.PhotosForDays.selectPhoto</string>
+	</array>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
